--- a/Trastevere/src/app/pages/interes/interes.component.html
+++ b/Trastevere/src/app/pages/interes/interes.component.html
@@ -3,7 +3,7 @@
         <h2>Lugares de interes</h2>
     </div>
     <div class="flex justify-content-center">
-        <div class="grid">
+        <div class="grid" style="width: 75%;">
             <div class="col-12">
 
                 <p>Descubre los tesoros de nuestra zona y enriquece tu estancia explorando los mejores lugares que
